# spear

./: .gitignore  .gitmodules  .main.dot  AnalysisStrategy_8h_source.html  Bencher_8h_source.html  CLIExceptions_8h_source.html  CLIHandler_8h_source.html  CLIOptions_8h_source.html  CMakeLists.txt  CSVHandler_8h_source.html  Color_8h_source.html  DeMangler_8h_source.html  Doxyfile  EnergyFunction_8h_source.html  FunctionTree_8h_source.html  GraphBuilder_8h_source.html  IfNode_8h_source.html  IfTree_8h_source.html  InstructionCategory_8h_source.html  JSONHandler_8h_source.html  LICENSE  LLVMHandler_8h_source.html  LoopNode_8h_source.html  LoopTree_8h_source.html  Node_8h_source.html  PowercapReader_8h_source.html  Profiler_8h_source.html  ProgramDependenceGraph_8h_source.html  ProgramGraph_8h_source.html  ProgramTree_8h_source.html  README.md  RaplReader_8h_source.html  RegisterReader_8h_source.html  annotated.html  classAnalysisOptions-members.html  classAnalysisOptions.html  classAnalysisStrategy-members.html  classAnalysisStrategy.html  classBencher-members.html  classBencher.html  (+105 more)
.github/workflows/: doxygen.yml  main.yml
docs/: Doxyfile
graphbuilder/: CMakeLists.txt  GraphBuilder.cpp  GraphBuilder.h  Node.h  ProgramDependenceGraph.cpp
llvm-code-under-bench/: groupB.ll  groupD.ll  groupG.ll  irToBinary.sh
llvm-code-under-bench/src/: groupG.ll  groupM.ll
profile/: irToBinary.sh
profile/src/: call.ll  cast.ll  division.ll  memoryread.ll  programflow.ll
profile/src/compiled/: division  memorywrite  programflow  stdbinary
programs/advanced/: hmac.cpp  rsa.cpp
programs/compare/: fakultaet_it.cpp  fakultaet_rek.cpp  fibonacci.cpp  fibonacci_compare.cpp
programs/compare/algorithm/: arrayReducer_complex.cpp  arrayReducer_simple.cpp  fakultaet_rek.cpp  fibonacci_it.cpp  fibonacci_rek.cpp  ggt_div.cpp  ggt_sub.cpp
programs/compare/algorithm/compiled/: fakultaet_it  fakultaet_rek  fibonacci_it  fibonacci_rek
programs/compare/programs/: meaner.cpp  meaner_overhead.cpp  squarer.cpp  squarer_shift.cpp
programs/compare/programs/compiled/: squarer  squarer.ll  squarer_shift  squarer_shift.ll
programs/debug/: basic.ll  call.ll  callOutsider.ll  callWithLoop.cpp  callWithLoop.ll  double_call.cpp  iftest.cpp  iftest.ll  nestedloops.cpp
programs/examples/: arrayReducer_complex.cpp  arrayReducer_simple.cpp  bubblesort.cpp  fakultaet_it.cpp  fibonacci.cpp  fibonacci_compare.cpp  ggt.cpp  insertionSort.cpp
programs/helper/: randomFiller.cpp
programs/outofbounds/: largeArrayInspector.cpp  libcaller.cpp  smallArrayInspector.cpp
programs/outofbounds/compiled/: largeArrayInspector  libcaller  smallArrayInspector
programs/simple/: addition.cpp  basic.cpp  binarysearch.cpp  bubblesort.cpp  call.cpp  callOutsider.cpp  fibonacci.cpp  ggt.cpp  insertionSort.cpp  linsearch.cpp  loopifcombined.cpp  loopifcombined.ll  nestedloops.ll  variance.cpp  whilelooptest.ll
rapl-reader/: CMakeLists.txt  RaplReader.cpp  RaplReader.h  main.cpp  readTest
rapl-reader/doc/: Doxyfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  (+28 more)
src/: CMakeLists.txt
src/include/: CMakeLists.txt
src/include/Bencher/: Bencher.cpp  Bencher.h  CMakeLists.txt
src/include/CSV-Handler/: CSVHandler.cpp  CSVHandler.h
src/include/JSON-Handler/: JSONHandler.h
src/include/LLVM-Handler/: InstructionCategory.cpp  InstructionCategory.h  LLVMHandler.cpp  LLVMHandler.h  LoopTree.cpp  LoopTree.h
src/include/Rapl-reader/: RegisterReader.cpp  RegisterReader.h
src/include/graphbuilder/: CMakeLists.txt  GraphBuilder.h  Node.cpp  ProgramDependenceGraph.cpp  ProgramDependenceGraph.h
src/include/rapl-reader/: CMakeLists.txt  RaplReader.cpp  RaplReader.h  RegisterReader.cpp  RegisterReader.h  main.h
src/main/: CMakeLists.txt
src/main/include/: CMakeLists.txt
src/main/include/AnalysisStrategy/: AnalysisStrategy.h
src/main/include/CLIHandler/: CLIExceptions.h  CLIHandler.cpp  CLIHandler.h  CLIOptions.cpp  CLIOptions.h
src/main/include/FunctionTree/: FunctionTree.cpp  FunctionTree.h
src/main/include/JSON-Handler/: JSONHandler.cpp  JSONHandler.h
src/main/include/LLVM-Handler/: DeMangler.cpp  DeMangler.h  EnergyFunction.cpp  EnergyFunction.h  InstructionCategory.cpp  InstructionCategory.h  LLVMHandler.cpp  LLVMHandler.h  LoopTree.cpp
src/main/include/LoopTree/: LoopTree.cpp  LoopTree.h
src/main/include/Profiler/: Profiler.cpp  Profiler.h
src/main/include/ProgramGraph/: Color.cpp  Color.h  Edge.cpp  InstructionElement.cpp  LoopNode.cpp  Node.cpp  ProgramGraph.cpp  ProgramGraph.h
src/main/include/ProgramTree/: CoastlineNode.cpp  CoastlineNode.h  CoastlineTree.cpp  CoastlineTree.h  Edge.cpp  Edge.h  IfNode.cpp  IfNode.h  IfTree.cpp  IfTree.h  LoopNode.cpp  LoopNode.h  LoopRegion.cpp  LoopRegion.h  LoopTree.cpp  LoopTree.h  Node.cpp  Node.h  ProgramTree.cpp  ProgramTree.h
src/main/include/Rapl-reader/: CMakeLists.txt  PowercapReader.h  RegisterReader.cpp  RegisterReader.h
src/main/passes/: CMakeLists.txt
src/passes/energy/: CMakeLists.txt  energy.cpp  energy.h  fallback.txt
src/test/: CMakeLists.txt
src/test/JSON-Handler/: json_handler_test.cpp
src/test/LLVM-Handler/: Instruction_category_test.cpp  LLVM_handler_test.cpp
src/test/sample/: sample.cpp
src/test/static/: looptest.cpp  looptest.ll  test.json
util/analysisrunner/: analysis_result.csv  analysisrunner.py  durationtester.py  stability_plotter.py  stabilitytester.py
util/cacheclearer/: cacheclearer.cpp
util/llvmToBinary/: cppToBinary.sh  irToBinary.sh
util/statistics/: analysisplot.py  profilegraph.py
util/statisticshelper/: statisticshelper.py
(+2 files in other folders)
